--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,11 +20,13 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
- <string name="hello">Hello World, DevicePolicyDemoActivity!</string>
+    <string name="hello">Hello World, DevicePolicyDemoActivity!</string>
     <string name="app_name">DevicePolicyDemo</string>
     <string name="enable_device_admin">Enable Device Admin</string>
     <string name="lock_device">Lock Device</string>
     <string name="reset_device">Reset Device</string>
     <string name="device_admin_enabled">Device Admin Enabled</string>
     <string name="device_admin_disabled">Device Admin Disabled</string>
+    <string name="title_activity_lock">LockActivity</string>
+
 </resources>
